2003-12-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-ctrlline.c (sp_ctrlline_render): Use pixblock-line
	(sp_ctrlline_update): Ditto

	* src/libnr/nr-pixblock-line.c (nr_pixblock_draw_line_rgba32): Try clipping

2003-12-18  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/main.c (main): Add --display argument check if we use gui

2003-12-16  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/module.c (sp_modules_init): Fixed argv extra indirection bug

	* src/main.c (sp_main_console): Do not try to initialize Gdk

	* src/libnrtype/nr-type-xft.c (nr_type_xft_init): Support fontconfig

2003-12-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/style.h: Added currentcolor field to paint and
	color inheritable attribute to style

	* src/style.c (sp_style_merge_ipaint): Support currentColor
	(sp_style_merge_from_parent): Parse color and currentColor

2003-12-14  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object.h: Changed signature of ::remove_child, added
	blocked flag

	* src/sp-object.c (sp_object_repr_remove_child): Fail if blocked

	* src/object-ui.c (sp_item_apply_transformation): New method
	(sp_item_menu): Added 'Apply transformation'

	* src/dialogs/export.c (sp_export_progress_callback): New method
	(sp_export_export_clicked): Added progress dialog

2003-12-12  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-text.c: (sp_string_set_shape):
	Fixed a memory leak bug which caused with SP_TEXT_NEW_CONTENT

2003-12-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/export.c (sp_export_dialog): Added background
	color picker

	* src/widgets/sp-color-preview.c (sp_color_picker_get_type): New
	widget type
	(sp_color_preview_paint): Allow toggling transparent/opaque areas
	(sp_color_preview_new): Signature change

2003-12-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-stroke.c (nr_bpath_stroke_bbox_union): Implement

2003-12-10  John Stracke  <francis@REMOVE_THISthibault.org>
